--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Daniel-Slabaugh/crud-blog#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "router": "^1.3.1",
+    "uuid": "^3.1.0"
   }
 }
