--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "morgan": "^1.8.2",
     "router": "^1.3.1",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.5.0"
   }
 }
